@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-21T00:53:20Z",
+  "timestamp" : "2022-05-21T08:14:47Z",
   "count_outdated" : 270,
   "uniques_outdated" : 136,
-  "count" : 326,
-  "uniques" : 173,
+  "count" : 328,
+  "uniques" : 175,
   "clones" : [
     {
       "timestamp": "2022-05-07T00:00:00Z",
@@ -102,6 +102,13 @@
       "count_minmax": [ 10, 14 ],
       "uniques": 10,
       "uniques_minmax": [ 7, 10 ]
+    },
+    {
+      "timestamp": "2022-05-21T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
