@@ -1,6 +1,6 @@
 {
-  "count": 56,
-  "uniques": 19,
+  "count": 58,
+  "uniques": 20,
   "clones": [
     {
       "timestamp": "2022-05-07T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2022-05-20T00:00:00Z",
       "count": 14,
       "uniques": 10
+    },
+    {
+      "timestamp": "2022-05-21T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
