@@ -1,3 +1,10 @@
+2022-05-21T08:14:47Z:
+* notice: last 14d: unq all: 20 58
+* notice: prev accum: outdated-unq outdated-all / unq all: 136 270 / 173 326
+* notice: next accum: outdated-unq outdated-all / unq all: 136 270 / 175 328
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: changed dates: [2022-05-21]
+
 2022-05-21T00:53:20Z:
 * notice: last 14d: unq all: 19 56
 * notice: prev accum: outdated-unq outdated-all / unq all: 136 270 / 171 323
